feat: piano component and xsound player

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,8 @@
 
 body {
   font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
+  background: #333;
+  color: gold;
 }
 
 html, body, #root, .app {
